tests/snapshots/integration__integration_tests__list__task_dag_ordering_stability.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--progressive"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
  [1mBranch[0m           [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m  [1mRemote⇅[0m  [1mPath[0m                     [1mCommit[0m    [1mAge[0m   [1mMessage
@ feature-current      [2m↑[22m                 [32m↑1[0m               ../repo.feature-current  [2mf8d9dc91[0m  [2m23h[0m   [2mCommit at 01:00
^ main                 [2m^[22m[2m|[22m                           [2m|[0m     .                        [2m01cab36c[0m  [2m1d[0m    [2mInitial commit on main
+ feature-a            [2m↕[22m                 [32m↑1[0m  [2m[31m↓1[0m           ../repo.feature-a        [2m1b87d473[0m  [2m16h[0m   [2mAdd feature-a file
+ feature-b            [2m↕[22m                 [32m↑1[0m  [2m[31m↓1[0m           ../repo.feature-b        [2mf62940fc[0m  [2m16h[0m   [2mAdd feature-b file
+ feature-c            [2m↕[22m                 [32m↑1[0m  [2m[31m↓1[0m           ../repo.feature-c        [2m345c7c93[0m  [2m16h[0m   [2mAdd feature-c file
+ feature-newest       [2m↑[22m                 [32m↑1[0m               ../repo.feature-newest   [2m57c29ea7[0m  [2m21h[0m   [2mCommit at 03:00
+ feature-middle       [2m↑[22m                 [32m↑1[0m               ../repo.feature-middle   [2ma63f3739[0m  [2m22h[0m   [2mCommit at 02:00
+ feature-oldest       [2m↑[22m                 [32m↑1[0m               ../repo.feature-oldest   [2ma9b3e5b7[0m  [2m23h[0m   [2mCommit at 00:30

[2m○[22m [2mShowing 8 worktrees, 7 ahead

----- stderr -----
